# ijkplayer

android/contrib/: compile-ffmpeg.sh  compile-openssl.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-detect-env.sh
android/ijkplayer/: build.gradle  gradle.properties  settings.gradle
android/ijkplayer/gradle/wrapper/: gradle-wrapper.properties
android/ijkplayer/ijkplayer-armv7a/: build.gradle
android/ijkplayer/ijkplayer-armv7a/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  VideoActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java  Settings.java
android/ijkplayer/ijkplayer-exo/: build.gradle
android/ijkplayer/ijkplayer-java/: CMakeLists.txt  build.gradle
config/: module-default.sh  module-lite-hevc.sh
ijkmedia/ijkj4a/: Android.mk
ijkmedia/ijkplayer/: Android.mk  ff_ffmsg_queue.h
ijkmedia/ijksdl/: Android.mk
ijkprof/android-ndk-profiler-dummy/jni/: Android.mk
